# spi2mqtt

./: Cargo.toml  LICENSE  README.md  build.rs  config.yaml
src/: config.rs  logger.rs  main.rs  spi_communication.rs
src/c/: Appl.c  SPI_Driver.c  SPI_Driver.h  bBConfigs.h  bB_EasyAPI.c  bB_EasyAPI.h  bcm2835.c
