[package]
name = "spi2mqtt"
version = "0.1.0"
authors = ["HeosSacer <ee2marine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
chrono = "0.4.10"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
url = "1.7"
url_serde = "0.2"
clap = "2.33.0"

[build-dependencies]
cc = "1.0"
